# ready-image

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  images.yaml
k8s/: example.yaml  readyimage.yaml
k8s/controller/: deployment.yaml  sa.yaml
k8s/sleeper/: Dockerfile
src/: controller.rs  lib.rs  resource.rs
